--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,12 +9,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: true
       - name: Hugo setup
         uses: peaceiris/actions-hugo@v3.0.0
         with:
           extended: true
       - name: Build
-        run: hugo
+        run: hugo --minify --gc
       - name: Setup Ossutil
         uses: manyuanrong/setup-ossutil@v3.0
         with:
